--- a/data-structures/Breadth-first/package.json
+++ b/data-structures/Breadth-first/package.json
@@ -10,5 +10,9 @@
     "test-watch": "jest --watchAll --verbose --coverage"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "jest": "^26.0.1",
+    "lint": "^0.7.0"
+  }
 }
